# bridge-opencode

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  LICENSE  README.md  bridge.ts  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml  version-check.yml
hooks/: hooks.json
opencode/: bridge.ts
plugin/: bridge.lua
src/: action.rs  constants.rs  handler.rs  hook.rs  lib.rs  main.rs  utils.rs
src/action/: neovim.rs
src/action/neovim/: buffer.rs  connection.rs  lua.rs
tests/: hook_tests.rs  utils_tests.rs
