[package]
name = "bridge"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
neovim-lib = "0.6"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"

# Pin rmp to avoid breaking changes in 0.8.15 that break rmpv 0.4.7 (used by neovim-lib)
rmp = "=0.8.14"
