[package]
name = "bridge-opencode"
version = "0.0.11"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
napi-build = "2"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
neovim-lib = "0.6"
glob = "0.3"
napi = { version = "2", default-features = false, features = ["napi6"], optional = true }
napi-derive = { version = "2", optional = true }

# Pin rmp to avoid breaking changes in 0.8.15 that break rmpv 0.4.7 (used by neovim-lib)
rmp = "=0.8.14"
